# libsql-c

./: .clang-format  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  bindgen.sh  build.rs  build.sh  flake.nix  libsql.h  package.nix  package.sh  rust-toolchain.toml
.github/workflows/: cd.yml  ci.yml  release.yml
examples/: Makefile.common
examples/batch/: README.md  example.c
examples/encryption/: README.md  example.c
examples/local/: README.md  example.c
examples/memory/: README.md  example.c
examples/remote/: Makefile  README.md  example.c
examples/sync/: README.md  example.c
examples/transactions/: README.md  example.c
examples/vector/: README.md  example.c
macros/: Cargo.toml
macros/src/: lib.rs
src/: bindings.rs  lib.rs
